--- a/css/screens/chats.css
+++ b/css/screens/chats.css
@@ -6,10 +6,11 @@ a:link {
     text-decoration: none;
 }
 
+
 .chats {
    word-break: keep-all;
 }
-
+åå
 .chatting-icon {
     height: 30px;
     width: 30px;
