--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -44,3 +44,42 @@
     color: var(--grey);
     font-size: 16px;
 }
+
+@keyframes hideSplashScreen {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#splash-screen {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--grey);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 122px;
+    animation: hideSplashScreen 1.5s ease-in-out forwards;
+    animation-delay: 1s;
+}
+
+
+.splash-screen__title {
+    font-size: 25px;
+    color: black;
+    margin: 15px 0px;
+    font-weight: 700;
+}
+
+.splash-screen__title:last-child {
+    font-weight: 300;
+    font-size: 18px;
+}
