--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,3 +1,8 @@
+#friends-screen-main {
+    width: 100%;
+    height: 100%;
+}
+
 .friends-random-match {
     margin: 0px var(--horizontal-space);
     display: flex;
@@ -14,7 +19,7 @@
 }
 
 .friends-screen {
-    margin: 10px var(--horizontal-space);
+    margin: 10px 20px;
 }
 
 .friends-screen__channel-header {
@@ -44,6 +49,8 @@
     color: var(--grey);
     font-size: 16px;
 }
+
+/**/
 
 @keyframes hideSplashScreen {
     from {
